Fix bug #68162: isset($$varname) always true